Resolve styling errors

--- a/QuotesApp/src/app/app.component.html
+++ b/QuotesApp/src/app/app.component.html
@@ -1,3 +1,4 @@
+<!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
 <div class="intro">
       <h1>
@@ -5,3 +6,4 @@
          </h1>
 </div>
   <app-quotes></app-quotes>
+
