--- a/QuotesApp/src/styles.css
+++ b/QuotesApp/src/styles.css
@@ -1,4 +1,4 @@
-@import "~bootstrap/dist/css/bootstrap.css"
+/* @import "~bootstrap/dist/css/bootstrap.css" */
 .box{
 
     padding: 40px;
@@ -49,7 +49,7 @@
  body{
      margin: 0;
      padding: 0;
-     background-image: url('https://images.pexels.com/photos/459791/pexels-photo-459791.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');
+     background-image: url('assets/books.png');
      background-repeat: no-repeat;
      background-size: cover;
 
